--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ Flask==1.1.2
 Flask-Login==0.5.0
 Flask-Markdown==0.3
 Flask-WTF==0.14.3
-gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
 Markdown==3.3.3
@@ -14,6 +13,7 @@ passlib==1.7.4
 Pint==0.16.1
 psycopg2==2.8.6
 pyparsing==2.4.7
+python-dotenv==0.15.0
 scrypt==0.8.17
 six==1.15.0
 soupsieve==2.0.1
