--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Flask-WTF==0.14.3
 gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
+lxml==4.6.1
 Markdown==3.3.3
 MarkupSafe==1.1.1
 packaging==20.4
