--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Markdown==3.3.3
 MarkupSafe==1.1.1
 packaging==20.4
 passlib==1.7.4
+Pillow==8.0.1
 Pint==0.16.1
 psycopg2==2.8.6
 pyparsing==2.4.7
