--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Pillow==8.0.1
 Pint==0.16.1
 psycopg2==2.8.6
 pyparsing==2.4.7
+PyQRCode==1.2.1
 python-dotenv==0.15.0
 scrypt==0.8.17
 six==1.15.0
