--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ click==7.1.2
 Flask==1.1.2
 Flask-Login==0.5.0
 Flask-Markdown==0.3
+flask-talisman==0.7.0
 Flask-WTF==0.14.3
 gunicorn==20.0.4
 itsdangerous==1.1.0
