remove version specs from requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,26 @@
-beautifulsoup4==4.9.3
-click==7.1.2
-Flask==1.1.2
-Flask-Login==0.5.0
-Flask-Markdown==0.3
-flask-talisman==0.7.0
-Flask-WTF==0.14.3
-gunicorn==20.0.4
-itsdangerous==1.1.0
-Jinja2==2.11.2
-lxml==4.6.1
-Markdown==3.3.3
-MarkupSafe==1.1.1
-packaging==20.4
-passlib==1.7.4
-Pillow==8.0.1
-Pint==0.16.1
-psycopg2==2.8.6
-pyparsing==2.4.7
-PyQRCode==1.2.1
-python-dotenv==0.15.0
-scrypt==0.8.17
-six==1.15.0
-soupsieve==2.0.1
-Werkzeug==1.0.1
-WTForms==2.3.3
+beautifulsoup4
+click
+Flask
+Flask-Login
+Flask-Markdown
+flask-talisman
+Flask-WTF
+gunicorn
+itsdangerous
+Jinja2
+lxml
+Markdown
+MarkupSafe
+packaging
+passlib
+Pillow
+Pint
+psycopg2
+pyparsing
+PyQRCode
+python-dotenv
+scrypt
+six
+soupsieve
+Werkzeug
+WTForms
