--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 # Byte-compiled / optimized / DLL files
-__pycache__/
-*.pyc
-simple_recipes/db/recipes/__pycache__/
+**/__pycache__/
 
 # Environments
 venv/
