tweaks to requirements.txt and other files

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
 beautifulsoup4
 click
-Flask
-Flask-Login
-Flask-Markdown
-flask-talisman
-Flask-WTF
+Flask==1.1.2
+Flask-Login==0.5.0
+Flask-Markdown==0.3
+flask-talisman==0.7.0
+Flask-WTF==0.14.3
 gunicorn
 itsdangerous
-Jinja2
+Jinja2==2.11.2
 lxml
 Markdown
-MarkupSafe
+MarkupSafe==1.1.1
 packaging
 passlib
 Pillow
@@ -23,4 +23,4 @@ scrypt
 six
 soupsieve
 Werkzeug
-WTForms
+WTForms==2.3.3
